# CNEr

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md  configure  configure.ac
R/: AllClasses.R  AllClasses.r  AllGenerics.R  AllGenerics.r  Ancora.R  AssemblyStats.R  Axt-class.R  Axt-methods.R  CNE-class.R  CNE-methods.R  CNE-utils.R  DB.R  GO.R  GRB.R  GRangePairs-class.R  GRangePairs-methods.R  IO-methods.R  KEGG.R  WholeGenomeAlignment.R  ceScan.R  ceScan.r  io.R  io1.R  makeGeneDbFromUCSC.R  makeGeneDbFromUCSC.r  plot.R  scoringMatrix.r  subAxt-methods.R  utils.R  utils.r
data/: CNEDanRer10Hg38.rda  CNEDanRer7Hg19.rda  CNEHg19DanRer7.rda  CNEHg38DanRer10.rda  axisTrack.rda  axtDanRer7Hg19.rda  axtHg19DanRer7.rda  cneBlatedDanRer7Hg19.rda  cneFinalListDanRer10Hg38.rda  cneHg19DanRer7_45_50.rda  cneHg19DanRer7_48_50.rda  cneHg19DanRer7_49_50.rda  cpgIslands.rda  finalCNE.rda  grangesPairsForDotplot.rda  ideoTrack.rda  qSizesDanRer7.rda  qSizesHg19.rda  refGenes.rda
inst/: CITATION
man/: AssemblyStats.Rd  Axt-class.Rd  Axt-util.Rd  CNE-class.Rd  CNEDanRer10Hg38.Rd  CNEDensity.Rd  CNEHg19DanRer7.Rd  GRangePairs-class.Rd  GRangePairs.Rd  addAncestorGO.Rd  axisTrack.Rd  axt-class.Rd  axtChain.Rd  axtDanRer7Hg19.Rd  axtInfo.Rd  binner.Rd  blatCNE.Rd  ceScan-methods.Rd  ceScanOneStep.Rd  chainMergeSort.Rd  chainNetSyntenic.Rd  chainPreNet.Rd  cneBlatedDanRer7Hg19.Rd  cneFinalListDanRer10Hg38.Rd  cneHg19DanRer7_45_50.Rd  cneMerge.Rd  dotplotAxt.Rd  fetchChromSizes.Rd  finalCNE.Rd  fixCoordinates.Rd  grangesPairsForDotplot.Rd  last.Rd  lastz.Rd  (+27 more)
(+68 files in other folders)
